--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -40,3 +40,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../styles/shared-styles.html">
 <link rel="import" href="my-list/my-list.html">
 <link rel="import" href="questions-list/questions-list.html">
+<link rel="import" href="add-question/add-question.html">
