--- a/app/elements/add-question/add-question.html
+++ b/app/elements/add-question/add-question.html
@@ -1,13 +1,3 @@
-<!--
-@license
-Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
--->
-
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/paper-input/paper-input.html">
 <link rel="import" href="../../bower_components/paper-input/paper-textarea.html">
@@ -29,7 +19,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         margin: 20px 0;
       }
     </style>
-    <paper-material elevation="1">
+
+    <paper-material>
       <form is="iron-form" id="form" method="post" action="/form/handler">
         <paper-input label="Question:"></paper-input>
         <paper-textarea label="Answer:"></paper-textarea>
@@ -37,6 +28,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       </form>
     </paper-material>
   </template>
+
   <script>
   (function() {
     'use strict';
