Add Neon Animations

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -16,6 +16,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
 
 <!-- Paper elements -->
+<link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
 <link rel="import" href="../bower_components/paper-drawer-panel/paper-drawer-panel.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../bower_components/paper-item/paper-item.html">
@@ -28,6 +29,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <!-- Google Web Components -->
 <link rel="import" href="../bower_components/firebase-element/firebase-collection.html">
+
+<!-- Neon Animations -->
+<link rel="import" href="../bower_components/neon-animation/neon-animations.html">
 
 <!-- Uncomment next block to enable Service Worker Support (2/2) -->
 <!--
