--- a/app/index.html
+++ b/app/index.html
@@ -121,12 +121,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
             <section data-route="home">
               <h3><span>Questions List:</span></h3>
-                <questions-list questions="{{questions}}"></questions-list>
+                <questions-list data="{{questions}}"></questions-list>
             </section>
 
             <section data-route="random-question">
               <h3><span>Random Question</span></h3>
-              <questions-list questions="{{questions}}" is-random></questions-list>
+              <questions-list data="{{questions}}" is-random></questions-list>
             </section>
 
             <section data-route="add-question">
