--- a/app/elements/app-login/app-login.html
+++ b/app/elements/app-login/app-login.html
@@ -1,8 +1,18 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/firebase-element/firebase-auth.html">
 
 <dom-module id="app-login">
   <template>
+    <firebase-auth
+      id="firebaseLogin"
+      location="https://id-questions.firebaseio.com"
+      provider="google"
+      status-known="{{statusKnown}}"
+      user="{{user}}"
+    ></firebase-auth>
+
     <h4>You need to be logged to add questions</h4>
+    <paper-button on-tap="login" type="button">Login</paper-button>
   </template>
   <script>
   (function() {
@@ -12,6 +22,25 @@
       is: 'app-login',
 
       properties: {
+        user: {
+          type: Object,
+          value: function () {
+            return {};
+          },
+          observer: '_userChanged'
+        },
+        statusKnown: Boolean
+      },
+
+      _userChanged: function (user) {
+        if (user.uid) {
+          app.isLogged = true;
+          page('/add-question');
+        }
+      },
+
+      login: function () {
+        this.$.firebaseLogin.login();
       }
     });
   })();
