--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -46,3 +46,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="questions-list/questions-list.html">
 <link rel="import" href="add-question/add-question.html">
 <link rel="import" href="app-login/app-login.html">
+<link rel="import" href="search-box/search-box.html">
