--- a/app/elements/app-login/app-login.html
+++ b/app/elements/app-login/app-login.html
@@ -23,7 +23,7 @@
       user="{{user}}"
     ></firebase-auth>
 
-    <paper-card heading="LogIn">
+    <paper-card heading="Login">
       <div class="card-content">You need to be logged to add questions</div>
       <div class="card-actions">
         <p>{{user.uid}}</p>
