--- a/app/index.html
+++ b/app/index.html
@@ -122,7 +122,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
             <section data-route="random-question">
               <h3><span>Random Question</span></h3>
-              <questions-list questions="[[questions]]" is-random></questions-list>
+              <questions-list id="randomQuestion" questions="[[questions]]" is-random></questions-list>
             </section>
 
             <section data-route="add-question">
