Rename element tags

--- a/app/elements/add-question/add-question.html
+++ b/app/elements/add-question/add-question.html
@@ -35,7 +35,7 @@
         <div class="card-content">
           <paper-input id="question" name="question" label="Question:" required></paper-input>
           <paper-textarea id="answer" name="answer" label="Answer:" required></paper-textarea>
-          <questions-tags-input id="tags"></questions-tags-input>
+          <question-tags-input id="tags"></question-tags-input>
           <input id="user" name="user" type="hidden" value="[[user.uid]]">
         </div>
         <div class="card-actions">
