--- a/app/elements/question-tags-input/question-tags-input.html
+++ b/app/elements/question-tags-input/question-tags-input.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/paper-tags-input/paper-tags-input.html">
 
-<dom-module id="paper-questions-tags-input">
+<dom-module id="question-tags-input">
   <template>
     <style>
       :host {
@@ -15,7 +15,7 @@
     'use strict';
 
     Polymer({
-      is: 'paper-questions-tags-input',
+      is: 'question-tags-input',
 
       properties: {
         value: {
