--- a/app/elements/questions-list/questions-list.html
+++ b/app/elements/questions-list/questions-list.html
@@ -31,10 +31,12 @@
       <paper-card heading="[[item.question]]">
         <div class="card-content">[[item.answer]]</div>
         <div class="card-actions">
-          <template is="dom-repeat" items="[[keys(item.tags)]]" as="tag">
-            <paper-button raised noink disabled>[[tag]]</paper-button>
-          </template>
-          <paper-button>[[_getLevel(levels, item.level)]]</paper-button>
+          <small>
+            <template is="dom-repeat" items="[[keys(item.tags)]]" as="tag">
+              <paper-button raised noink disabled>[[tag]]</paper-button>
+            </template>
+            <paper-button raised noink disabled>[[_getLevel(levels, item.level)]]</paper-button>
+          </small>
         </div>
       </paper-card>
     </template>
