--- a/app/elements/add-question/add-question.html
+++ b/app/elements/add-question/add-question.html
@@ -5,6 +5,7 @@
 <link rel="import" href="../../bower_components/paper-card/paper-card.html">
 <link rel="import" href="../../bower_components/paper-input/paper-textarea.html">
 <link rel="import" href="../../bower_components/paper-input/paper-input.html">
+<link rel="import" href="../question-tags-input/question-tags-input.html">
 <link rel="import" href="../question-level-dropdown/question-level-dropdown.html">
 
 <dom-module id="add-question">
@@ -36,7 +37,7 @@
         <div class="card-content">
           <paper-input id="question" name="question" label="Question:" required></paper-input>
           <paper-textarea id="answer" name="answer" label="Answer:" required></paper-textarea>
-          <question-tags-input id="tags"></questions-tags-input>
+          <question-tags-input id="tags"></question-tags-input>
           <question-level-dropdown
             name="level" label="Level" required
           ></question-level-dropdown>
